# reflexia

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT-HEADER.txt  Dockerfile  ENVIRONMENT_SETUP_COMPLETE.md  LICENSE  Makefile  NOTICE  PATENTS.md  QUICK_FIX_GUIDE.md  README.md  config.json  config.py  demo.py  deploy.sh  docker-compose.yml  examples:example_usage.py  fine_tuning.py  fix_all.sh  fix_docstrings.py  fix_port_conflict.py  fix_rag_emergency.py  initialize_reflexia.py  input.txt  main.py  main.py.bak  main.py.rag_ref_bak  memory_manager.py  ml_basics.md  model_manager.py  monitoring.py  next_steps.md  output.json  prometheus.yml  prompt_manager.py  pyproject.toml  (+14 more)
.github/workflows/: ci.yml
docs/: api.md  api_auth.md  api_reference.md  api_spec.yaml  architecture.md  benchmarking.md  deployment.md  security.md  troubleshooting.md  usage.md
examples/: adaptive_quantization.py  basic_inference.py  example_usage.py  rag_example.py  web_ui_example.py
kubernetes/: configmap.yaml  monitoring.yaml  namespace.yaml  ollama-deployment.yaml  persistent-volumes.yaml  reflexia-deployment.yaml  secret.yaml
output/benchmarks/: benchmark-20250323-184113.json  benchmark-20250323-203511.json
scripts/: apply_copyright.py  ensure_rebranding.py
src/: __init__.py
src/reflexia/: __init__.py
tests/: __init__.py  test_config.py  test_memory_manager.py  test_model_manager.py  test_monitoring.py  test_recovery.py
web_ui/static/: app.js  expert-roles.css  expert-roles.js  socket.io.js  styles.css
web_ui/templates/: index.html
(+6 files in other folders)
